# crew

./: .active_model  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.jsonc  .pre-commit-config.yaml  .replit  100_PERCENT_UNIT_TEST_COVERAGE_MILESTONE_2025_01_04.md  AGENTS.md  AI Discord Bot Codebase Review.md  AI_ENHANCEMENTS_IMPLEMENTATION_SUMMARY.md  ANALYSIS-COMPLETE.md  ARCHITECTURE.md  ASC1_CRITICAL_WORK_SYNTHESIS_2025-11-07.md  ASC1_DELIVERABLE_2025-11-03.md  ATOMIC_CLEANUP_SUMMARY.md  BEAST_MODE_CODE_AUDIT_2025-01-XX.md  BEAST_MODE_INTELLIGENCE_REPORT_2025-11-04.md  CACHE_ENHANCEMENT_COMPLETE.md  CACHE_ENHANCEMENT_DAY1_COMPLETE.md  CACHE_ENHANCEMENT_DAY2_COMPLETE.md  CACHE_ENHANCEMENT_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CLAUDE.md  COLLABORATIVE_INTELLIGENCE_IMPLEMENTATION.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_SUCCESS_REPORT.md  CONTRIBUTING.md  CREW_FIXES_SUMMARY.md  CREW_WORKFLOW_FIXES.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DEVELOPER_ONBOARDING_GUIDE.md  DOCUMENTATION_AUDIT_2025.md  DOCUMENTATION_REFRESH_2025-11-03.md  DOCUMENTATION_REFRESH_PROGRESS_2025-11-03.md  Dockerfile  F011_F014_DEPLOYMENT_VERIFIED_2025-11-12.md  F011_F014_GUARD_CI_INTEGRATION_COMPLETE_2025-11-12.md  (+126 more)
.claude/: config.json.example  settings.json  statusline-script.sh
.config/: creator-ops.env.example  mypy-phase2.ini  mypy_baseline.json  pyproject.toml  pytest-parallel.ini  pytest.ini  requirements.optimizations.txt
.githooks/: pre-commit
.github/: PROJECT_BOARD.md  cache-config.yml  copilot-instructions.md  copilot-quickref.md  pull_request_template.md
.metadata/: CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  COMPLETION_SUMMARY.txt  DEEP_CLEANUP_REPORT.md  DIRECTORY_INDEX.md  FINAL_CLEANUP_SUMMARY.md  MAINTENANCE_GUIDE.md  PHASE3_CLEANUP_REPORT.md  README.md
.plans/: MAIN_SYNC_COMPLETE_2025-11-04.md  PLAN_VERIFICATION_REPORT.md  PLAN_VERIFICATION_REPORT_CODE_LEVEL.md  SYNC_COMPLETION_2025-11-04.md  directory-restructure-FINAL.md
archive/: WHERE_WE_ARE_NOW_PHASE3.md  inventory.json
archive_historical/: UNIFIED_SYSTEM_COMPLETION_REPORT.md
bandit_state/: linucb_d2.json  linucb_d3.json
benchmarks/: README.md  baselines.yaml  cache_performance_benchmark.py  combination_1_interim.json  combination_2_interim.json  combination_3_interim.json  combination_7_interim.json  combination_8_interim.json  flag_validation_results_20251004_204836.json  flag_validation_results_20251004_205349.json  flag_validation_results_20251004_212540.json  flag_validation_results_20251004_214748.json  flag_validation_results_20251004_233545.json  flag_validation_results_20251004_235044.json  flag_validation_results_20251005_225629.json  flag_validation_results_20251005_230645.json  flag_validation_summary_20251004_204836.md  flag_validation_summary_20251004_212540.md  flag_validation_summary_20251004_214748.md  flag_validation_summary_20251005_001104.md  flag_validation_summary_20251005_002620.md  flag_validation_summary_20251005_225629.md  flag_validation_summary_20251005_233554.md  performance_benchmarks.py  phase1_performance_benchmark.py  phase2_semantic_cache_run.pid  phase2_semantic_cache_run2.pid  week4_tuned_validation_1759725583.json  week4_validation_pipeline_20251006_050736.json
config/: archive_routes.yaml  content_types.yaml  deprecations.yaml  early_exit.yaml  error_recovery.yaml  grounding.yaml  ingest.yaml  monitoring.yaml  policy.yaml  poller.yaml  profiles.yaml  pytest.ini  qdrant_collections.yaml  retry.yaml  security.yaml
dashboards/: README.md  alerts.yml  cache_performance.json  hipporag_learning.json
datasets/: README.md
docs/: A2A_ADAPTER.md  AI_ENHANCEMENT_REVIEW_2025.md  AI_FRAMEWORKS_INVENTORY.md  ARCHITECTURE_SYNC_REPORT_2025-09-21.md  AUTOINTEL_CRITICAL_ISSUES.md  AUTOINTEL_FIX_GUIDE.md  AUTONOMOUS_AGENTIC_IMPLEMENTATION_PLAN.md  Beast_Mode.agent.md  COMPREHENSIVE_ANALYSIS_SUMMARY.md  COMPREHENSIVE_REPOSITORY_REVIEW_2025_01_04.md  COPILOT_INSTRUCTIONS_UPDATE.md  CREWAI_WORKFLOW_FIXES.md  CURRENT_STATE_SUMMARY.md  DATA_TRANSFORMERS_UNIT_TESTS_COMPLETE.md  DEPLOYMENT_READY_WEEK_4.md  DISCORD_HELPERS_EXTRACTION_COMPLETE_2025_01_04.md  DOCKER_F_DRIVE_SETUP.md  DOCKER_WSL2_SETUP.md  DOCUMENTATION_REFRESH_SUMMARY.md  ENHANCEMENT_SUMMARY.md  EXTRACTORS_UNIT_TESTS_COMPLETE.md  FINAL_RECOMMENDATIONS.md  GETTING_STARTED.md  IMMEDIATE_ACTION_PLAN_2025_01_04.md  IMPORT_MIGRATION_COMPLETE.md  INDEX.md  LLM_PROVIDER_ROUTING_PLAN.md  ONBOARDING.md  OPTIONAL_DEPENDENCIES.md  ORCHESTRATOR_DECOMPOSITION_STATUS_2025_01_04.md  ORCHESTRATOR_REFACTORING_STATUS.md  ORCHESTRATOR_TESTS_97_PERCENT_COMPLETE.md  ORCHESTRATOR_TEST_INFRASTRUCTURE_COMPLETE.md  PERFORMANCE_BEST_PRACTICES.md  PERFORMANCE_FIXES_APPLIED.md  PERFORMANCE_IMPROVEMENT_RECOMMENDATIONS.md  PERFORMANCE_INITIATIVE_SUMMARY.md  PERFORMANCE_METRICS.md  PERFORMANCE_OPTIMIZATION_PLAN.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  (+212 more)
examples/: README.md  __init__.py  a2a_client_example.py  artifact_publishing_example.py  asr_transcription_example.py  caching_examples.py  claim_quote_extraction_example.py  community_pulse_analyzer_example.py  cross_platform_deduplication_example.py  cross_platform_narrative_tracker_example.py  fastmcp_crewai_integration.py  framework_switching_demo.py  guest_topic_pre_briefs_example.py  highlight_detection_example.py  mem0_preference_learning_example.py  multimodal_pipeline_example.py  openai_integration_example.py  orchestration_strategies_example.py  rights_reuse_intelligence_example.py  safety_brand_suitability_example.py  sentiment_stance_analysis_example.py  smart_clip_composer_example.py  speaker_diarization_example.py  sponsor_compliance_assistant_example.py  topic_segmentation_example.py  unified_memory_plugins_example.py  visual_parsing_example.py
profiling/: memory.prof  orchestrator_analysis.txt  routing_analysis.txt
reports/: MYPY_COMPLIANCE_ACHIEVEMENT_REPORT.md  PERFORMANCE_OPTIMIZATION_ACHIEVEMENT_REPORT.md  agent_enhancement_report.md  agentevals_ci.json  bandit_scan.json  ci_optimization_report.md  dependency_graph.json  (+25 more)
(+4616 files in other folders)
